[package]
name = "Sampler"
version = "0.1.0"
edition = "2021"

[dependencies]
audio-visualizer = "0.5.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "*", features = ["all_loaders"] }
regex = "1.11.1"
rfd = "0.15.3"

rodio = "0.20.1"
symphonia = "0.5.4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
youtube_dl = "0.10.0"
